# swiggy-dineout-challenge

./: .gitignore  CLAUDE.md  Notes from Anshika  README.md  Todo.md  init_database.py  main.py  pyproject.toml  swiggy_dineout.db
.claude/commands/: README.md  analyze-performance-trends.md  evaluate-ad-campaigns.md  generate-peer-insights.md  generate-recommendations.md  generate-restaurant-insights.md  generate-restaurant-report.md
.db/: swiggy_dineout.db
artifacts/190f268c/: Notes from Anshika  ad_evaluation.json  ads_data.json  anomalies.json  peer_benchmarks.json  peer_insights.json  performance_trends.json  recommendations.json  restaurant_data.json  restaurant_report.md  session_context.json  workflow_execution.json  workflow_execution.md
artifacts/8e85652c/: booking_performance_R001_20241222.md  campaign_roi_R001_20241222.md  competitive_analysis_R001_20241222.md  dashboard.html  evaluation_results.md  operational_excellence_R001_20241222.md  restaurant_performance_briefing_R001_20241222.md  (+4 more)
artifacts_protocol/: protocol.md
docs/: data-requirements-and-generation.md  deep-research-analysis.md  problem-exploration.md  problem-statement.md  restaurant-intelligence-system-unified.md  restaurant-performance-agent-prd.md  system-architecture.md
prompts/: analysis-categories.md  artifacts-protocol.md  dashboard-generator.md  data-sources.md  instructions.md  orchestration.md  output-format.md  tools-build.md  tools.md
strategies/: README.md
tools/: analyze_performance_trends.py  collect_restaurant_data.py  detect_anomalies.py  initialize_session.py
(+82 files in other folders)
