[project]
name = "swiggy-dineout-copilot"
version = "0.1.0"
description = "AI-powered Co-Pilot for Swiggy Dineout restaurant performance analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "python-dotenv>=1.0.0",
    "claude-code-sdk>=0.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
